made paths to video relative

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             ,"intensity":"1"
             ,"enabled":"1"
             ,src: [
-              'http://localhost/html5player/videos/TBBBTYB_hopsports.mp4'
-              //,'http://localhost/html5player/videos/TBBBTYB_hopsports.webm'
+              'videos/TBBBTYB_hopsports.mp4'
+              //,'videos/TBBBTYB_hopsports.webm'
             ]
             ,srcHD: [
-              'http://localhost/html5player/videos/ADA_BEST1.mp4'
-              //,'http://localhost/html5player/videos/ADA_BEST1.webm'
+              'videos/ADA_BEST1.mp4'
+              //,'videos/ADA_BEST1.webm'
             ]
             ,type: "video/mp4"
-            ,poster : 'http://localhost/html5player/videos/TBBBTYB_hopsports.jpg'
+            ,poster : 'videos/TBBBTYB_hopsports.jpg'
             ,title : 'Ad 1'  
             ,isAd: true
             ,controls: false 
@@ -84,7 +84,7 @@
             ,srcHD: [
               'http://www.youtube.com/watch?v=f9aMmSzIHnI'
             ]
-            ,poster : 'http://localhost/html5player/videos/TBBBTYB_hopsports.jpg'
+            ,poster : 'videos/TBBBTYB_hopsports.jpg'
             ,title : 'Ad 1'  
             ,isAd: false
             ,controls: true 
@@ -104,12 +104,12 @@
             ,"intensity":"1"
             ,"enabled":"1"
             ,src: [
-              'http://localhost/html5player/videos/TBBBTYB_hopsports.mp4'
+              'videos/TBBBTYB_hopsports.mp4'
             ]
             ,srcHD: [
-              'http://localhost/html5player/videos/TBBBTYB_hopsports.mp4'
+              'videos/TBBBTYB_hopsports.mp4'
             ]
-            ,poster : 'http://localhost/html5player/videos/TBBBTYB_hopsports.jpg'
+            ,poster : 'videos/TBBBTYB_hopsports.jpg'
             ,title : 'Ad 1'  
             ,isAd: true
             ,controls: false 
