--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="http://github.com/clarkeadg/html5video">Github</a></li>
       </ul>
 
-      <h1>HTML5 VIDEO</h1>
+      <h1>HTML5 VIDEO!</h1>
       <p class="tagline">Made with Video JS</p>
 
       <!-- Begin VideoJS -->
