--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <li><a href="get-started.html">Get Started</a></li>
         <li><a href="docs/">Docs</a></li>
         <li><a href="examples/">Examples</a></li>        
-        <li><a href="http://github.com/clarkeadg/html5video/zipball/master">Download</a></li>
-        <li><a href="http://github.com/clarkeadg/html5video">Github</a></li>
+        <li><a href="https://github.com/clarkeadg/html5video/zipball/master">Download</a></li>
+        <li><a href="https://github.com/clarkeadg/html5video">Github</a></li>
       </ul>
 
       <h1>HTML5 VIDEO</h1>
@@ -97,8 +97,8 @@
         <div id="supported" class="clearfix">
           <h6>Download</h6>
           <div class="supported-section">
-            <a href="http://github.com/clarkeadg/html5video/zipball/master" title="Zip Download"><img src="assets/demo/images/icons/zip.png" alt="Zip Download"></a>
-            <a href="github.com/clarkeadg/html5video/tarball/master" title="Tar Download"><img src="assets/demo/images/icons/tar.png" alt="Tar Download"></a>
+            <a href="https://github.com/clarkeadg/html5video/zipball/master" title="Zip Download"><img src="assets/demo/images/icons/zip.png" alt="Zip Download"></a>
+            <a href="https://github.com/clarkeadg/html5video/tarball/master" title="Tar Download"><img src="assets/demo/images/icons/tar.png" alt="Tar Download"></a>
           </div>
           <h6>Supported Browsers</h6>
           <div class="supported-section">
