--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             <li>Multiple video players on 1 page</li>
           </ul>
 
-          <br/>
+        </div>
+
+        <div class="jumbotron">
 
           <h6>Plus all regular Video JS Features</h6>
           <ul id="feature_list">
