--- a/examples/get-started.html
+++ b/examples/get-started.html
@@ -41,9 +41,9 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../examples/get-started.html">Get Started</a></li>
-          <li class="active"><a href="../docs/">Docs</a></li>
-          <li><a href="../examples/">Examples</a></li>        
+          <li class="active"><a href="#">Get Started</a></li>
+          <li><a href="../docs/">Docs</a></li>
+          <li><a href="index.html">Examples</a></li>        
           <li><a href="https://github.com/clarkeadg/html5video/zipball/master">Download</a></li>
           <li><a href="https://github.com/clarkeadg/html5video">Github</a></li>
         </ul>
