--- a/examples/index.html
+++ b/examples/index.html
@@ -1,121 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>  
-  <title>html5videoplayer.js | HTML5 Video Player</title>
+<head>
+  <meta charset="utf-8" />
+  <title>HTML5 Video Player | Video JS</title>
+
+  <!-- REQUIRED -->
   <link href="../assets/css/video-js.css" rel="stylesheet" type="text/css">
   <link href="../assets/css/video-js-resolutions.css" rel="stylesheet" type="text/css">  
-  <link href="../assets/css/html5video.css" rel="stylesheet" type="text/css"> 
-</head>
-<body> 
-  <div id="video1"></div>  
+  <link href="../assets/css/html5video.css" rel="stylesheet" type="text/css">
   <script src="../assets/js/jquery.min.js"></script>
   <script src="../assets/js/bowser.min.js"></script>
   <script src="../assets/js/video.dev.js"></script>  
   <script src="../assets/js/video-js-resolutions.js"></script>
   <script src="../assets/js/video-js-youtube.js"></script> 
   <script src="../assets/js/html5video.js"></script>
-  <script type="text/javascript">
-    $(function() {        
-      videojs.options.flash.swf = "../assets/flash/video-js.swf";      
-      var video1 = new html5video($('#video1'),{
-        id: 'video-1' //must have a unique idea if you want more than 1 video on a page
-        ,width: 640
-        ,height: 390
-        ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
-        ,enableStats: false        
-        ,replayText: 'Replay ?'
-        ,autoplay: true         
-        ,loop: false
-        ,debug: false
-        ,AppSettings: {
-          UserID: "brian"
-            ,AccountID: 1
-            ,Version: '1.4.6'
-            ,AppPlatform: 'html5'
-            ,Skin: 'web'
-        } 
-        ,videos: [  
-          {
-            "id":"ad1"
-            ,"name":"Ad 1"
-            ,"contentpack_id":"ad1"
-            ,"father_id":null
-            ,"description":"Ad 1"
-            ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-            ,"filename":""
-            ,"contents_sort_order":"1"
-            ,"video_type":"Ad"
-            ,"duration":"0"
-            ,"tags":""
-            ,"intensity":"1"
-            ,"enabled":"1"
-            ,src: [
-              '../assets/videos/TBBBTYB_hopsports.mp4'
-              //,'../assets/videos/TBBBTYB_hopsports.webm'
-            ]
-            ,srcHD: [
-              '../assets/videos/ADA_BEST1.mp4'
-              //,'../assets/videos/ADA_BEST1.webm'
-            ]
-            ,type: "video/mp4"
-            ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-            ,title : 'Ad 1'  
-            ,isAd: true
-            ,controls: true 
-          }
-          ,{
-            "id":"OyYoyYoy"
-            ,"name":"OyYoyYoy"
-            ,"contentpack_id":"OyYoyYoy"
-            ,"father_id":null
-            ,"description":"OyYoyYoy"
-            ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-            ,"filename":""
-            ,"contents_sort_order":"1"
-            ,"video_type":"School"
-            ,"duration":"0"
-            ,"tags":""
-            ,"intensity":"1"
-            ,"enabled":"1"
-            ,src: [
-              'http://www.youtube.com/watch?v=f9aMmSzIHnI' //oy yoy yoy
-            ]
-            ,srcHD: [
-              'http://www.youtube.com/watch?v=f9aMmSzIHnI'
-            ]
-            ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-            ,title : 'Ad 1'  
-            ,isAd: false
-            ,controls: true 
-          }
-          ,{
-            "id":"ad2"
-            ,"name":"Ad 2"
-            ,"contentpack_id":"ad1"
-            ,"father_id":null
-            ,"description":"Ad 1"
-            ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-            ,"filename":""
-            ,"contents_sort_order":"1"
-            ,"video_type":"Ad"
-            ,"duration":"0"
-            ,"tags":""
-            ,"intensity":"1"
-            ,"enabled":"1"
-            ,src: [
-              '../assets/videos/TBBBTYB_hopsports.mp4'
-            ]
-            ,srcHD: [
-              '../assets/videos/TBBBTYB_hopsports.mp4'
-            ]
-            ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-            ,title : 'Ad 1'  
-            ,isAd: true
-            ,controls: false 
-          } 
-        ]
-      });
-    });
-  </script>
+
+  <!-- OPTIONAL -->
+  <link href="../assets/demo/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">  
+  <script src="../assets/demo/bootstrap/js/bootstrap.min.js"></script>
+  <link href="../assets/demo/css/navbar-fixed-top.css" rel="stylesheet" type="text/css">
+  <link href="../assets/demo/css/site.css" rel="stylesheet" type="text/css">
+  <!--<link href="../assets/demo/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">-->
+
+</head>
+<body>
+
+<div id="wrap" >
+
+  <!-- Fixed navbar -->
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="../">HTML5 Video</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="get-started.html">Get Started</a></li>
+          <li><a href="../docs/">Docs</a></li>
+          <li class="active"><a href="#">Examples</a></li>        
+          <li><a href="https://github.com/clarkeadg/html5video/zipball/master">Download</a></li>
+          <li><a href="https://github.com/clarkeadg/html5video">Github</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</div>
+
 </body>
 </html>
