--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-  <div id="wrap" >
+<div id="wrap" >
 
   <!-- Fixed navbar -->
   <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -41,7 +41,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="get-started.html">Get Started</a></li>
+          <li><a href="examples/get-started.html">Get Started</a></li>
           <li><a href="docs/">Docs</a></li>
           <li><a href="examples/">Examples</a></li>        
           <li><a href="https://github.com/clarkeadg/html5video/zipball/master">Download</a></li>
@@ -56,8 +56,8 @@
       <p>Cross-browser HTML5 Video Player made with <a href="http://www.videojs.com" >Video JS</a>. Supports all major browsers plus iOS and Android.</p>
       <div id="video1"></div> 
       <p>
-        <a class="btn btn-lg btn-primary" href="demos/get-started.html" role="button">Get Started</a>
-        <a class="btn btn-lg btn-primary" href="demos/examples/" role="button">View Examples</a>
+        <a class="btn btn-lg btn-primary" href="examples/get-started.html" role="button">Get Started</a>
+        <a class="btn btn-lg btn-primary" href="examples/" role="button">View Examples</a>
       </p>
     </div>
   </div> 
@@ -146,7 +146,7 @@
     </div>   
   </div>
 
-  </div>
+</div>
 
   <script type="text/javascript">
     $(function() {        
