moved get-started to docs

--- a/examples/index.html
+++ b/examples/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="get-started.html">Get Started</a></li>
+          <li><a href="../docs/get-started.html">Get Started</a></li>
           <li><a href="../docs/">Docs</a></li>
           <li class="active"><a href="#">Examples</a></li>        
           <li><a href="https://github.com/clarkeadg/html5video/zipball/master">Download</a></li>
