--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             ,srcHD: [
               'assets/videos/TBBBTYB_hopsports.mp4'
             ]
-            ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
+            ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
             ,title : 'Ad 1'  
             ,isAd: true
             ,controls: false 
