--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
   </div> 
 
-  <div class="container">
+  <div class="container white">
     <div class="row">
       <div class="col-md-8">
 
@@ -97,7 +97,7 @@
       </div>
       <div class="col-md-4">
 
-        <div class="jumbotron1">
+        <div class="jumbotron">
           
           <h6>Download</h6>
           <div class="supported-section">
@@ -121,7 +121,7 @@
           <div class="supported-section">
             <a href="http://en.wikipedia.org/wiki/H.264/MPEG-4_AVC" title="h264"><img src="assets/demo/images/icons/h264.png" alt="h264"></a>
             <a href="http://www.theora.org/" title="Ogg"><img src="assets/demo/images/icons/ogg.png" alt="Ogg"></a>
-            <a href="http://www.webmproject.org/" title="WebM"><img src="assets/demo/images/icons/webm.png" alt="WebM"></a>
+            <a href="http://www.webmproject.org/" class="dark" title="WebM"><img src="assets/demo/images/icons/webm.png" alt="WebM"></a>
           </div>
           
           <h6>Compatible With</h6>
@@ -132,7 +132,10 @@
         </div>
 
       </div>
-    </div>
+    </div> 
+  </div>
+
+  <div class="container">
     <div class="row foot">
       <div class="col-12">
         <p id="issues_link">Submit any bugs in the <a href="https://github.com/clarkeadg/html5video/issues">Issue Tracker</a> or update the <a href="https://github.com/clarkeadg/html5video/wiki">Wiki</a></p> 
