--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         ,enableStats: false        
         ,replayText: 'Replay ?'
         ,autoplay: true         
-        ,loop: false
+        ,loop: true
         ,debug: false
         ,AppSettings: {
           UserID: "brian"
@@ -179,7 +179,49 @@
             ,AppPlatform: 'html5'
             ,Skin: 'web'
         } 
-        ,videos: [  
+        ,videos: function(cb) {
+          $.ajax({
+            url: 'https://pipes.yahoo.com/pipes/pipe.run?_id=3cf61508d3be9eab5172c92beb9e2d12&_render=json'
+            ,dataType: 'json'
+            ,success: function(data) {
+              console.log(data)
+              var playlist = [];
+              $.each(data.value.items,function(i,v){
+                playlist.push({
+                  "id":i
+                  ,"name":"video "+i
+                  ,"contentpack_id":"youtube"
+                  ,"father_id":null
+                  ,"description":v.title
+                  ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
+                  ,"filename":""
+                  ,"contents_sort_order":"1"
+                  ,"video_type":"youtube"
+                  ,"duration":"0"
+                  ,"tags":""
+                  ,"intensity":"1"
+                  ,"enabled":"1"
+                  ,src: [
+                    v.link
+                  ]
+                  ,srcHD: [
+                    v.link
+                  ]
+                  ,type: "youtube"
+                  ,poster : ''
+                  ,title : v.title 
+                  ,isAd: false
+                  ,controls: true 
+                })
+              });
+              cb(playlist);
+            }
+            ,error: function(err) {
+              console.log(err)
+            }
+          });          
+        }
+        ,videos1: [  
           {
             "id":"ad1"
             ,"name":"Ad 1"
