--- a/examples/loop.html
+++ b/examples/loop.html
@@ -34,29 +34,19 @@
           ,AppPlatform: 'html5'
           ,Skin: 'web'
       } 
-      ,videos: [         
-        {
-          "id":"OyYoyYoy"
-          ,"name":"OyYoyYoy"
-          ,"contentpack_id":"OyYoyYoy"
-          ,"father_id":null
-          ,"description":"OyYoyYoy"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"School"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI' //oy yoy yoy
+      ,videos: [  
+       {
+          src: [
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ]
           ,srcHD: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI'
-          ]
-          ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
+          ] 
+          ,poster: "http://video-js.zencoder.com/oceans-clip.png"
           ,isAd: false
           ,controls: true 
         }        
