--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
         } 
         ,videos: function(cb) {
           $.ajax({
-            url: 'https://pipes.yahoo.com/pipes/pipe.run?_id=3cf61508d3be9eab5172c92beb9e2d12&_render=json'
+           // url: 'https://pipes.yahoo.com/pipes/pipe.run?_id=3cf61508d3be9eab5172c92beb9e2d12&_render=json'
+           // url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=af1731677d0479671fe57893dfdf001c&_render=json' // top all
+            url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json' // top electronic
             ,dataType: 'json'
             ,success: function(data) {
               console.log(data)
