--- a/examples/2-videos.html
+++ b/examples/2-videos.html
@@ -12,16 +12,24 @@
 </head>
 <body>
 
-<div id="video1"></div> 
-<div id="video2"></div> 
+<style>
+.video-small {
+  display: inline-block;
+  width: 320px;
+  height: 195px;
+}
+</style>
+
+<div id="video1" class="video-small"></div> 
+<div id="video2" class="video-small"></div> 
 
 <script type="text/javascript">
   $(function() {        
     videojs.options.flash.swf = "../assets/flash/video-js.swf";      
     var video1 = new html5video($('#video1'),{
       id: 'video-1' //must have a unique idea if you want more than 1 video on a page
-      ,width: 640
-      ,height: 390
+      ,width: 320
+      ,height: 195
       ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
       ,enableStats: false        
       ,replayText: 'Replay ?'
@@ -36,91 +44,27 @@
           ,Skin: 'web'
       } 
       ,videos: [  
-        {
-          "id":"ad1"
-          ,"name":"Ad 1"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //,'../assets/videos/TBBBTYB_hopsports.webm'
+       {
+          src: [
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ]
           ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //'assets/videos/ADA_BEST1.mp4'
-            //,'../assets/videos/ADA_BEST1.webm'
-          ]
-          ,type: "video/mp4"
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        }
-        ,{
-          "id":"OyYoyYoy"
-          ,"name":"OyYoyYoy"
-          ,"contentpack_id":"OyYoyYoy"
-          ,"father_id":null
-          ,"description":"OyYoyYoy"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"School"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI' //oy yoy yoy
-          ]
-          ,srcHD: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI'
-          ]
-          ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
+          ] 
+          ,poster: "http://video-js.zencoder.com/oceans-clip.png"
           ,isAd: false
           ,controls: true 
-        }
-        ,{
-          "id":"ad2"
-          ,"name":"Ad 2"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        } 
+        }        
       ]
     });
     var video2 = new html5video($('#video2'),{
       id: 'video-2' //must have a unique idea if you want more than 1 video on a page
-      ,width: 640
-      ,height: 390
+      ,width: 320
+      ,height: 195
       ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
       ,enableStats: false        
       ,replayText: 'Replay ?'
@@ -135,85 +79,21 @@
           ,Skin: 'web'
       } 
       ,videos: [  
-        {
-          "id":"ad1"
-          ,"name":"Ad 1"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //,'../assets/videos/TBBBTYB_hopsports.webm'
+       {
+          src: [
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ]
           ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //'assets/videos/ADA_BEST1.mp4'
-            //,'../assets/videos/ADA_BEST1.webm'
-          ]
-          ,type: "video/mp4"
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        }
-        ,{
-          "id":"OyYoyYoy"
-          ,"name":"OyYoyYoy"
-          ,"contentpack_id":"OyYoyYoy"
-          ,"father_id":null
-          ,"description":"OyYoyYoy"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"School"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI' //oy yoy yoy
-          ]
-          ,srcHD: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI'
-          ]
-          ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
+          ] 
+          ,poster: "http://video-js.zencoder.com/oceans-clip.png"
           ,isAd: false
           ,controls: true 
-        }
-        ,{
-          "id":"ad2"
-          ,"name":"Ad 2"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        } 
+        }        
       ]
     });
   });
