--- a/examples/api-videos.html
+++ b/examples/api-videos.html
@@ -34,87 +34,48 @@
           ,AppPlatform: 'html5'
           ,Skin: 'web'
       } 
-      ,videos: [  
-        {
-          "id":"ad1"
-          ,"name":"Ad 1"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //,'../assets/videos/TBBBTYB_hopsports.webm'
-          ]
-          ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //'assets/videos/ADA_BEST1.mp4'
-            //,'../assets/videos/ADA_BEST1.webm'
-          ]
-          ,type: "video/mp4"
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
+      ,videos: function(cb) {
+          $.ajax({
+            url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json'
+            ,dataType: 'json'
+            ,success: function(data) {
+              console.log(data)
+              var playlist = [];
+              $.each(data.value.items,function(i,v){
+                playlist.push({
+                  "id":i
+                  ,"name":"video "+i
+                  ,"contentpack_id":"youtube"
+                  ,"father_id":null
+                  ,"description":v.title
+                  ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
+                  ,"filename":""
+                  ,"contents_sort_order":"1"
+                  ,"video_type":"youtube"
+                  ,"duration":"0"
+                  ,"tags":""
+                  ,"intensity":"1"
+                  ,"enabled":"1"
+                  ,src: [
+                    v.link
+                  ]
+                  ,srcHD: [
+                    v.link
+                  ]
+                  ,type: "youtube"
+                  ,poster : ''
+                  ,title : v.title 
+                  ,isAd: false
+                  ,controls: true 
+                })
+              });
+              cb(playlist);
+            }
+            ,error: function(err) {
+              console.log(err)
+            }
+          });          
         }
-        ,{
-          "id":"OyYoyYoy"
-          ,"name":"OyYoyYoy"
-          ,"contentpack_id":"OyYoyYoy"
-          ,"father_id":null
-          ,"description":"OyYoyYoy"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"School"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI' //oy yoy yoy
-          ]
-          ,srcHD: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI'
-          ]
-          ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: false
-          ,controls: true 
-        }
-        ,{
-          "id":"ad2"
-          ,"name":"Ad 2"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        } 
-      ]
     });
   });
 </script>
