--- a/examples/basic-template.html
+++ b/examples/basic-template.html
@@ -24,7 +24,7 @@
       ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
       ,enableStats: false        
       ,replayText: 'Replay ?'
-      ,autoplay: false         
+      ,autoplay: true         
       ,loop: false
       ,debug: false
       ,AppSettings: {
@@ -36,84 +36,20 @@
       } 
       ,videos: [  
         {
-          "id":"ad1"
-          ,"name":"Ad 1"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //,'../assets/videos/TBBBTYB_hopsports.webm'
+          src: [
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ]
           ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //'assets/videos/ADA_BEST1.mp4'
-            //,'../assets/videos/ADA_BEST1.webm'
-          ]
-          ,type: "video/mp4"
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: true 
-        }
-        ,{
-          "id":"OyYoyYoy"
-          ,"name":"OyYoyYoy"
-          ,"contentpack_id":"OyYoyYoy"
-          ,"father_id":null
-          ,"description":"OyYoyYoy"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"School"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI' //oy yoy yoy
-          ]
-          ,srcHD: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI'
-          ]
-          ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+            'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            //,'http://video-js.zencoder.com/oceans-clip.ogv'
+          ] 
+          ,poster: "http://video-js.zencoder.com/oceans-clip.png"
           ,isAd: false
           ,controls: true 
         }
-        ,{
-          "id":"ad2"
-          ,"name":"Ad 2"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        } 
       ]
     });
   });
