--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="assets/demo/css/navbar-fixed-top.css" rel="stylesheet" type="text/css">
   <link href="assets/demo/css/site.css" rel="stylesheet" type="text/css">
   <!--<link href="assets/demo/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">-->
+  <link href="assets/demo/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -48,8 +49,18 @@
   <div class="container">
     <div class="jumbotron1 center">
       <p>Cross-browser HTML5 Video Player made with <a href="http://www.videojs.com" >Video JS</a>. Supports all major browsers plus iOS and Android.</p>
-      <div id="video1"></div> 
-      <div id="thumbs"></div>
+      <div id="video-cont" >
+        <div id="video1"></div> 
+        <div id="video-title"></div> 
+        <h6>Top Electronic</h6>
+        <div id="playlist1" class="thumbs"></div>
+        <h6>Top Pop</h6>
+        <div id="playlist2" class="thumbs"></div>
+        <h6>Top Alternative</h6>
+        <div id="playlist3" class="thumbs"></div>
+        <div id="next"><a href="#" ><i class="fa fa-chevron-right"></i></a></div>
+        <div id="previous"><a href="#" ><i class="fa fa-chevron-left"></i></a></div>
+      </div>
       <p>
         <a class="btn btn-lg btn-primary" href="docs/get-started.html" role="button">Get Started</a>
         <a class="btn btn-lg btn-primary" href="examples/" role="button">View Examples</a>
@@ -65,7 +76,8 @@
           
           <h6>Features</h6>
           <ul id="feature_list">
-            <li>Playlists</li>
+            <li>Support for multiple playlists</li>
+            <li>Load playlists dynamically via ajax</li>
             <li>Youtube Videos</li>
             <li>Switch Resolutions</li>
             <li>Stat Tracking</li>
@@ -133,7 +145,7 @@
         </div>
 
         <div class="jumbotron">
-          <p>If you like this project, please don't hesitate to donate.  Thank you!</p>
+          <p>If you like this project, please donate.  Thank you!</p>
 
           <div class="center" >
           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -170,7 +182,7 @@
         ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
         ,enableStats: false        
         ,replayText: 'Replay ?'
-        ,autoplay: false         
+        ,autoplay: true         
         ,loop: true
         ,debug: false
         ,AppSettings: {
@@ -180,66 +192,35 @@
             ,AppPlatform: 'html5'
             ,Skin: 'web'
         } 
-        ,renderPlaylist: function(videos,z) {
-          //console.log(videos)
-          var myHtml = '';
-          $.each(videos,function(i,v){
-            //console.log(v)
-            myHtml+= '<a href="#" x-data="'+i+'" ><img src="'+v.poster+'" width="70"height="40" /></a>';
-          });
-          myHtml = $(myHtml);
-          $('#thumbs').html(myHtml);
-          $('#thumbs').find('a').bind('click',function(e){
-            console.log('clicky')
-            e.preventDefault();
-            z.opts.current = parseInt($(this).attr('x-data'));
-            z._initialize();
-          });
-        } 
-        ,videos: function(cb) {
-          $.ajax({
-           // url: 'https://pipes.yahoo.com/pipes/pipe.run?_id=3cf61508d3be9eab5172c92beb9e2d12&_render=json'
-           // url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=af1731677d0479671fe57893dfdf001c&_render=json' // top all
-            url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json' // top electronic
-            ,dataType: 'json'
-            ,success: function(data) {
-              //console.log(data)
-              var playlist = [];
-              $.each(data.value.items,function(i,v){
-                playlist.push({
-                  "id":i
-                  ,"name":"video "+i
-                  ,"contentpack_id":"youtube"
-                  ,"father_id":null
-                  ,"description":v.title
-                  ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-                  ,"filename":""
-                  ,"contents_sort_order":"1"
-                  ,"video_type":"youtube"
-                  ,"duration":"0"
-                  ,"tags":""
-                  ,"intensity":"1"
-                  ,"enabled":"1"
-                  ,src: [
-                    v.link
-                  ]
-                  ,srcHD: [
-                    v.link
-                  ]
-                  ,type: "youtube"
-                  ,poster : v['media:thumbnail'].url
-                  ,title : v.title 
-                  ,isAd: false
-                  ,controls: true 
-                })
-              });
-              cb(playlist);
-            }
-            ,error: function(err) {
-              console.log(err)
-            }
-          });          
-        }
+        ,videos: [{
+            "id":"ad1"
+            ,"name":"Ad 1"
+            ,"contentpack_id":"ad1"
+            ,"father_id":null
+            ,"description":"Ad 1"
+            ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
+            ,"filename":""
+            ,"contents_sort_order":"1"
+            ,"video_type":"Ad"
+            ,"duration":"0"
+            ,"tags":""
+            ,"intensity":"1"
+            ,"enabled":"1"
+            ,src: [
+              'assets/videos/TBBBTYB_hopsports.mp4'
+              //,'../assets/videos/TBBBTYB_hopsports.webm'
+            ]
+            ,srcHD: [
+              'assets/videos/TBBBTYB_hopsports.mp4'
+              //'assets/videos/ADA_BEST1.mp4'
+              //,'../assets/videos/ADA_BEST1.webm'
+            ]
+            ,type: "video/mp4"
+            ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
+            ,title : 'Ad 1'  
+            ,isAd: true
+            ,controls: false 
+          }]
         ,videos1: [  
           {
             "id":"ad1"
@@ -322,6 +303,97 @@
           } 
         ]
       });
+      $('#next').bind('click',function(e){
+        e.preventDefault();
+        video1.next();
+        $('#video-title').html(video1.opts.videos[video1.opts.current].title);  
+      });
+      $('#previous').bind('click',function(e){
+        e.preventDefault();
+        video1.previous();
+        $('#video-title').html(video1.opts.videos[video1.opts.current].title); 
+      });
+
+      getVideos('http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json',
+        function(data) {
+          makePlaylist(data,$('#playlist1'),video1);
+        }
+      );
+
+      getVideos('http://pipes.yahoo.com/pipes/pipe.run?_id=af1731677d0479671fe57893dfdf001c&_render=json',
+        function(data) {
+         makePlaylist(data,$('#playlist2'),video1);
+        }
+      );
+
+      getVideos('https://pipes.yahoo.com/pipes/pipe.run?_id=b3a4c1011716a9b1207714d139663d3a&_render=json',
+        function(data) {
+          makePlaylist(data,$('#playlist3'),video1);        
+        }
+      );
+
+      function getVideos(url,cb) {
+        $.ajax({
+          url: url
+          ,dataType: 'json'
+          ,success: function(data) {
+            console.log(data)
+            var playlist = [];
+            $.each(data.value.items,function(i,v){
+              playlist.push({
+                "id":i
+                ,"name":"video "+i
+                ,"contentpack_id":"youtube"
+                ,"father_id":null
+                ,"description":v.title
+                ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
+                ,"filename":""
+                ,"contents_sort_order":"1"
+                ,"video_type":"youtube"
+                ,"duration":"0"
+                ,"tags":""
+                ,"intensity":"1"
+                ,"enabled":"1"
+                ,src: [
+                  v.link
+                ]
+                ,srcHD: [
+                  v.link
+                ]
+                ,type: "youtube"
+                ,poster : v['media:thumbnail'].url
+                ,title : v.author + ' - ' + v.title 
+                ,isAd: false
+                ,controls: true 
+              })
+            });
+            cb(playlist);
+          }
+          ,error: function(err) {
+            console.log(err)
+          }
+        });          
+      }
+
+      function makePlaylist(videos,jcont,z) {
+        var myHtml = '';
+        $.each(videos,function(i,v){
+          //console.log(v)
+          myHtml+= '<a href="#" x-data="'+i+'" data-toggle="tooltip" data-placement="top" title="'+v.title+'"><img src="'+v.poster+'" width="70"height="40" /></a>';
+        });
+        myHtml = $(myHtml);
+        jcont.html(myHtml);
+        jcont.find('a').bind('click',function(e){
+          console.log('clicky')
+          e.preventDefault();
+          var t = $(this);
+          var id = parseInt(t.attr('x-data'));
+          z.opts.videos = videos;
+          z.loadVideo(id);
+          $('#video-title').html(t.attr('title'));      
+        });
+      }
+
     });
   </script>
 
