--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>HTML5 Video Player | Video JS</title>
 
-  <!-- REQUIRED -->
+  <!-- REQUIRED test -->
   <link href="assets/css/html5video.css" rel="stylesheet" type="text/css">
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/html5video.js"></script>
