--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <div class="row foot">
       <div class="col-12">
         <p id="issues_link">Submit any bugs in the <a href="https://github.com/clarkeadg/html5video/issues">Issue Tracker</a> or update the <a href="https://github.com/clarkeadg/html5video/wiki">Wiki</a></p> 
+        <p>Powered by <a href="//www.spideyjs.com" >SpideyJS</a></p>
       </div>
     </div>   
   </div>
