fixed resolutions plugin

--- a/examples/basic-template.html
+++ b/examples/basic-template.html
@@ -26,7 +26,7 @@
       ,replayText: 'Replay ?'
       ,autoplay: true         
       ,loop: false
-      ,debug: true
+      ,debug: false
       ,AppSettings: {
         UserID: "brian"
           ,AccountID: 1
@@ -38,13 +38,13 @@
         {
           src: [
             'http://video-js.zencoder.com/oceans-clip.mp4'
-            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            ,'http://video-js.zencoder.com/oceans-clip.webm'
             //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ]
           ,srcHD: [
-            'http://video-js.zencoder.com/oceans-clip.mp4'
-            //,'http://video-js.zencoder.com/oceans-clip.webm'
-            //,'http://video-js.zencoder.com/oceans-clip.ogv'
+            '../assets/videos/TBBBTYB_hopsports.mp4'
+            ,'../assets/videos/TBBBTYB_hopsports.webm'
+            //,'../assets/videos/TBBBTYB_hopsports.ogv'
           ] 
           ,poster: "http://video-js.zencoder.com/oceans-clip.png"
           ,isAd: false
