--- a/examples/index.html
+++ b/examples/index.html
@@ -52,17 +52,17 @@
       <div class="col-md-3">  
         <div class="jumbotron example_links" >
           <p><a href="#" x-data="basic-template.html">Basic Template</a></p>
-          <p><a href="#" x-data="2-videos.html">2 Videos</a></p>
-          <p><a href="#" x-data="stat-tracking.html">Stat Tracking</a></p>
+          <p><a href="#" x-data="basic-playlist.html">Basic Playlist</a></p>
+          <p><a href="#" x-data="2-videoplayers.html">2 Video Players</a></p>
           <p><a href="#" x-data="api-videos.html">Api Videos</a></p>
-          <p><a href="#" x-data="transparent-video.html">Transparent Video</a></p>
-          <p><a href="#" x-data="loop.html">Loop</a></p>
-          <p><a href="#" x-data="2-video-overlay.html">2 Videos Overlay</a></p>
+          <p><a href="#" x-data="ads-youtube.html">Ads & Youtube</a></p>
+          <p><a href="#" x-data="stat-tracking.html">Stat Tracking</a></p> 
+          <p><a href="#" x-data="custom-events.html">Custom Events</a></p>              
         </div>
       </div>
       <div class="col-md-9">
         <h2 id="examples_title" >Basic Template</h2>
-        <iframe id="examples_iframe" src="basic-template.html" width="100%" height="300" frameborder="0"></iframe> 
+        <iframe id="examples_iframe" src="basic-template.html" width="100%" height="420" frameborder="0"></iframe> 
         <h2>Example Code</h2>
         <div id="codesnippet" ></div>
       </div>
