--- a/examples/basic-playlist.html
+++ b/examples/basic-playlist.html
@@ -21,11 +21,11 @@
       id: 'video-1' //must have a unique idea if you want more than 1 video on a page
       ,width: 640
       ,height: 390
-      ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
+      ,statsApi: 'http://example.com/api/stats'
       ,enableStats: false        
       ,replayText: 'Replay ?'
       ,autoplay: true         
-      ,loop: true
+      ,loop: false
       ,debug: false
       ,AppSettings: {
         UserID: "brian"
@@ -35,21 +35,50 @@
           ,Skin: 'web'
       } 
       ,videos: [  
-       {
+        {
+          "id":"ad1"
+          ,"name":"Ad 1"
+          ,"contentpack_id":"ad1"
+          ,"father_id":null
+          ,"description":"Ad 1"
+          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
+          ,"filename":""
+          ,"contents_sort_order":"1"
+          ,"video_type":"Ad"
+          ,"duration":"0"
+          ,"tags":""
+          ,"intensity":"1"
+          ,"enabled":"1"
+          ,src: [
+            '../assets/videos/TBBBTYB_hopsports.mp4'
+            //,'../assets/videos/TBBBTYB_hopsports.webm'
+          ]
+          ,srcHD: [
+            '../assets/videos/TBBBTYB_hopsports.mp4'
+            //'assets/videos/ADA_BEST1.mp4'
+            //,'../assets/videos/ADA_BEST1.webm'
+          ]
+          ,type: "video/mp4"
+          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
+          ,title : 'Ad 1'  
+          ,isAd: true
+          ,controls: false 
+        }      
+        ,{
           src: [
             'http://video-js.zencoder.com/oceans-clip.mp4'
-            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            ,'http://video-js.zencoder.com/oceans-clip.webm'
             //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ]
           ,srcHD: [
             'http://video-js.zencoder.com/oceans-clip.mp4'
-            //,'http://video-js.zencoder.com/oceans-clip.webm'
+            ,'http://video-js.zencoder.com/oceans-clip.webm'
             //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ] 
           ,poster: "http://video-js.zencoder.com/oceans-clip.png"
           ,isAd: false
           ,controls: true 
-        }        
+        }
       ]
     });
   });
