--- a/examples/custom-events.html
+++ b/examples/custom-events.html
@@ -13,7 +13,6 @@
 <body>
 
 <div id="video1"></div> 
-<div id="video2"></div> 
 
 <script type="text/javascript">
   $(function() {        
@@ -117,105 +116,23 @@
         } 
       ]
     });
-    var video2 = new html5video($('#video2'),{
-      id: 'video-2' //must have a unique idea if you want more than 1 video on a page
-      ,width: 640
-      ,height: 390
-      ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
-      ,enableStats: false        
-      ,replayText: 'Replay ?'
-      ,autoplay: true         
-      ,loop: false
-      ,debug: false
-      ,AppSettings: {
-        UserID: "brian"
-          ,AccountID: 1
-          ,Version: '1.4.6'
-          ,AppPlatform: 'html5'
-          ,Skin: 'web'
-      } 
-      ,videos: [  
-        {
-          "id":"ad1"
-          ,"name":"Ad 1"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //,'../assets/videos/TBBBTYB_hopsports.webm'
-          ]
-          ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-            //'assets/videos/ADA_BEST1.mp4'
-            //,'../assets/videos/ADA_BEST1.webm'
-          ]
-          ,type: "video/mp4"
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        }
-        ,{
-          "id":"OyYoyYoy"
-          ,"name":"OyYoyYoy"
-          ,"contentpack_id":"OyYoyYoy"
-          ,"father_id":null
-          ,"description":"OyYoyYoy"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"School"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI' //oy yoy yoy
-          ]
-          ,srcHD: [
-            'http://www.youtube.com/watch?v=f9aMmSzIHnI'
-          ]
-          ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: false
-          ,controls: true 
-        }
-        ,{
-          "id":"ad2"
-          ,"name":"Ad 2"
-          ,"contentpack_id":"ad1"
-          ,"father_id":null
-          ,"description":"Ad 1"
-          ,"thumbnail":"ContentPacks\/brewers\/brewers_thumb.jpg"
-          ,"filename":""
-          ,"contents_sort_order":"1"
-          ,"video_type":"Ad"
-          ,"duration":"0"
-          ,"tags":""
-          ,"intensity":"1"
-          ,"enabled":"1"
-          ,src: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,srcHD: [
-            '../assets/videos/TBBBTYB_hopsports.mp4'
-          ]
-          ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
-          ,isAd: true
-          ,controls: false 
-        } 
-      ]
+
+    /* EVENTS */
+    video1.player.on('firstplay',function(e){
+      console.log('firstplay',video1.vid);  
     });
+
+    video1.player.on('play',function(e){
+      console.log('play',video1.vid);           
+    });
+
+    video1.player.on('ended',function(e){
+      console.log('ended',video1.vid); 
+      if (video1.opts.current == z.opts.videos.length) {               
+        console.log('lastVideoEnded',video1.vid); 
+      };
+    }); 
+    
   });
 </script>
 
