--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           makePlaylist(data,$('#playlist3')); 
           video1.opts.videos = data;
           video1.loadVideo(0);  
-         // video1.opts.adCounter = 1;   
+          video1.opts.adCounter = 1;   
         }
       );
 
